--- a/Crimer/src/CrimerGui/GoogleHeatMap.css
+++ b/Crimer/src/CrimerGui/GoogleHeatMap.css
@@ -20,3 +20,25 @@ html, body {
     font-family: 'Roboto','sans-serif';
     line-height: 30px;
 }
+
+
+.marquee {
+    z-index: 7;
+    position: absolute;
+    top: 75px;
+    width: 1200px;
+    line-height: 5px;
+    color: red;
+    white-space: nowrap;
+    overflow: hidden;
+    box-sizing: border-box;
+}
+.marquee p {
+    display: inline-block;
+    padding-left: 100%;
+    animation: marquee 10s linear infinite;
+}
+@keyframes marquee {
+    0%   { transform: translate(0, 0); }
+    100% { transform: translate(-100%, 0); }
+}
