--- a/Crimer/src/CrimerGui/GoogleHeatMap.css
+++ b/Crimer/src/CrimerGui/GoogleHeatMap.css
@@ -27,7 +27,7 @@ html, body {
     width: 100%;
     line-height: 5px;
     color: white;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    /*text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;*/
     white-space: nowrap;
     overflow: hidden;
     box-sizing: border-box;
