--- a/Crimer/src/CrimerGui/GoogleHeatMap.css
+++ b/Crimer/src/CrimerGui/GoogleHeatMap.css
@@ -24,7 +24,7 @@ html, body {
     z-index: 7;
     position: absolute;
     top: 70px;
-    width: 100%;
+    width: 2000px;
     line-height: 5px;
     color: white;
     /*text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;*/
