--- a/Crimer/src/CrimerGui/GoogleHeatMap.css
+++ b/Crimer/src/CrimerGui/GoogleHeatMap.css
@@ -27,7 +27,7 @@ html, body {
     width: 2000px;
     line-height: 5px;
     color: white;
-    /*text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;*/
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     white-space: nowrap;
     overflow: hidden;
     box-sizing: border-box;
@@ -35,7 +35,7 @@ html, body {
 .marquee p {
     display: inline-block;
     padding-left: 100%;
-    animation: marquee 3000s linear infinite;
+    animation: marquee 150s linear infinite;
 }
 @keyframes marquee {
     0%   { transform: translate(0, 0); }
