--- a/Crimer/src/CrimerGui/GoogleHeatMap.css
+++ b/Crimer/src/CrimerGui/GoogleHeatMap.css
@@ -29,12 +29,13 @@ html, body {
     width: 2000px;
     line-height: 5px;
     color: white;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
     white-space: nowrap;
     overflow: hidden;
     box-sizing: border-box;
 }
 .marquee p {
+    font-size: 25px;
     display: inline-block;
     padding-left: 100%;
     animation: marquee 150s linear infinite;
