--- a/Crimer/src/CrimerGui/GoogleHeatMap.css
+++ b/Crimer/src/CrimerGui/GoogleHeatMap.css
@@ -25,16 +25,16 @@ html, body {
     top: 220px;
     z-index: 6;
 }
-#togglebutton {
-    position: absolute;
-    top: 20px;
-    left: 47%;
-    z-index: 5;
-    background-color: #fff;
-    text-align: center;
-    font-family: 'Roboto','sans-serif';
-    line-height: 30px;
-}
+/*#togglebutton {*/
+    /*position: absolute;*/
+    /*top: 20px;*/
+    /*left: 47%;*/
+    /*z-index: 5;*/
+    /*background-color: #fff;*/
+    /*text-align: center;*/
+    /*font-family: 'Roboto','sans-serif';*/
+    /*line-height: 30px;*/
+/*}*/
 
 .marquee {
     margin: 0;
